--- a/applications/app-cert-manager.yaml
+++ b/applications/app-cert-manager.yaml
@@ -9,7 +9,7 @@ spec:
     namespace: cert-manager
   source:
     path: workloads/cert-manager/
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/win-n-kyaw/akuity-argo-appproject
     targetRevision: main
   project: default
   syncPolicy:
