refactor: update placeholders with win-n-kyaw

--- a/applications/app-cert-manager.yaml
+++ b/applications/app-cert-manager.yaml
@@ -11,7 +11,7 @@ spec:
     path: workloads/cert-manager/
     repoURL: https://github.com/win-n-kyaw/akuity-argo-appproject
     targetRevision: main
-  project: default
+  project: cluster-addons
   syncPolicy:
     automated:
       prune: true
